# cppRaft

./: .gitignore  .travis.yml  Dockerfile  README.md  WORKSPACE
.github/workflows/: build_docker_image.yml
examples/: BUILD.bazel  run_raft_instance_main.cc
src/: BUILD.bazel  consensus.proto  log.proto  raft_impl.cc  raft_impl.h  raft_instance.cc  raft_instance.h  state.proto
