load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "log_proto",
    srcs = ["log.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "cc_log_proto",
    visibility = ["//visibility:public"],
    deps = [":log_proto"],
)
