# Copyright 2020 Gan Tu All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "log_proto",
    srcs = ["log.proto"],
)

cc_proto_library(
    name = "cc_log_proto",
    deps = [":log_proto"],
)

proto_library(
    name = "state_proto",
    srcs = ["state.proto"],
    deps = [":log_proto"],
)

cc_proto_library(
    name = "cc_state_proto",
    deps = [":state_proto"],
)

proto_library(
    name = "consensus_proto",
    srcs = ["consensus.proto"],
    deps = [
        ":log_proto",
        ":state_proto",
    ],
)

cc_proto_library(
    name = "cc_consensus_proto",
    deps = [":consensus_proto"],
)

cc_grpc_library(
    name = "cc_consensus_grpc",
    srcs = [":consensus_proto"],
    grpc_only = True,
    deps = [":cc_consensus_proto"],
)
